src/styles/components/_youtube.scss
@import "../constants";

.youtube-container {
  position: relative;
  background-color: #000;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  @include responsive(mobile) {
    z-index: 1000;
    transition: transform 250ms ease-in-out;
    transform: translateX(100vw);
  }

  .video-container {
    display: flex;
    position: relative;
    width: calc(100vw - 360px);
    height: calc(100vh - 50px - 90px);

    @include responsive(mobile) {
      height: calc(100vh - 210px);
    }

    @include responsive(mobile-landscape) {
      height: calc(100vh - 80px);
    }

    iframe {
      left: 0;
      top: 0;
      height: 100%;
      width: 100%;
      position: absolute;
    }
  }

  &.fullscreen {
    transform: translateX(0);

    .video-container {
      width: 100vw;
      @include responsive(mobile) {
        width: 100vw;
      }
    }
  }

  .fullscreen-img {
    width: 18px;
    height: 18px;
  }

  .play-button,
  .forward-button {
    font-size: 1.625rem;
  }

  .play-button {
    margin-right: 4px;
  }

  .forward-button {
    margin-right: 8px;
  }

  .sound-button {
    width: 1.625rem;
    height: 1.625rem;
  }

  .sound-control {
    display: flex;
    align-items: center;
    padding-right: 16px;

    .volume-slider {
      top: 3px;
      width: 0px;
      transition: width 0.1s ease-in-out;
    }

    .ant-slider:hover .ant-slider-track,
    .ant-slider-track {
      background-color: #fff !important;
    }

    &:hover {
      .ant-slider-handle {
        opacity: 1 !important;
      }
      .volume-slider {
        width: 100px;
        margin-left: 14px;
      }
    }
  }

  .controls {
    position: relative;
    z-index: 2;
    height: 50px;
    padding: 0 20px;

    @include responsive(mobile) {
      padding: 0px 10px 0px;
    }

    @include responsive(mobile-landscape) {
      padding: 0px 10px 0px;
    }

    .ant-slider-handle {
      opacity: 0;
    }

    .ant-slider {
      margin: 0;
      padding: 0;
    }

    .ant-slider:hover .ant-slider-rail,
    .ant-slider-rail {
      background-color: rgba(255, 255, 255, 0.2);
    }

    .ant-slider:hover .ant-slider-track,
    .ant-slider-track {
      background-color: #07dee7;
    }
  }

  .slider-container {
    display: flex;
    margin: auto;
    color: #fff;
    align-items: center;
    justify-content: space-between;
  }

  .slider {
    display: flex;
    flex: 1;
  }

  .hover-controls {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 1;
    width: 100%;
    height: 50%;
    top: 20%;
    left: 0;
    background-image: linear-gradient(
      to bottom,
      transparent,
      rgba(0, 0, 0, 0.3),
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.3),
      transparent
    );
    opacity: 0;
    transition: opacity 250ms ease-in-out;
    pointer-events: none;

    @include responsive(mobile) {
      width: 100vw;
    }

    &.paused {
      opacity: 1;
      pointer-events: auto;
    }

    .upvote-button {
      margin-top: 1.75rem;
      border-radius: 7px;
      border: solid 1px #ff54ae;
      background-color: rgba(17, 23, 36, 0.65);
      color: $primary;
      padding: 14px 32px;
      cursor: pointer;

      &.voted {
        background-color: $primary;
        color: #fff;
      }
    }

    .play-icon {
      margin: 0 90px;

      &.mobile {
        margin: 0 40px;
      }
    }

    i {
      font-size: 42px;
      color: #fff;
      cursor: pointer;
    }
  }

  .tap-to-unmute {
    position: absolute;
    display: flex;
    align-items: center;
    bottom: 70px;
    left: 20px;
    background-color: #fff;
    border-radius: 6px;
    padding: 8px 15px;
    font-weight: bold;
    color: $dark_background;
    z-index: 5;

    @include responsive(mobile) {
      left: 0.625rem;
    }

    @include responsive(mobile-landscape) {
      bottom: 3.75rem;
      left: 0.625rem;
    }

    .unmute-img {
      width: 20px;
      height: 20px;
      margin-right: 8px;
    }
  }

  .show-ranking-mobile {
    width: 100vw;
    max-height: 90px;
    color: $secondary;
    padding: 1.25rem 0 0 0.625rem;
    font-size: 1.5rem;
  }
}

